@@ -4,8 +4,6 @@ import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.List;
 
-import winw.game.quant.util.HttpExecutor;
-
 /**
  * 腾讯接口实现。
  * 
@@ -31,13 +29,13 @@ public class TencentQuoteService implements QuoteService {
 	private SimpleDateFormat dateFormat = new SimpleDateFormat("yyyyMMddHHmmss");
 
 	public <T extends Quote> T get(Class<T> clazz, String code) throws Exception {
-		String response = HttpExecutor.get(realtimeQuoteUrl.replaceFirst("V_CODE", code));
+		String response = get(realtimeQuoteUrl.replaceFirst("V_CODE", code));
 		String[] fileds = response.split("~");
 		if (fileds == null || fileds.length <= 1) {
 			return null;
 		}
 
-		T quote = clazz.newInstance();
+		T quote = clazz.getDeclaredConstructor().newInstance();
 
 		// v_sh600233="1~圆通速递~600233~18.07~18.11~18.10~17984~7724~10260~18.07~158~18.06~703~18.05~453~18.04~552~18.03~426~18.08~210~18.09~61~18.10~414~18.11~15~18.12~111~15:00:02/18.07/5/S/9035/23371|15:00:00/18.07/1/S/1807/23368|14:59:57/18.07/1/S/1807/23364|14:59:50/18.07/17/S/30724/23355|14:59:44/18.07/7/S/12655/23349|14:59:44/18.07/1/S/1807/23346~20170804150557~-0.04~-0.22~18.14~18.03~18.07/17978/32487500~17984~3250~0.54~31.11~~18.14~18.03~0.61~59.63~509.80~6.01~19.92~16.30~0.83";
 		// 看返回数据是以 ~ 分割字符串中内容，下标从0开始，依次为
@@ -96,7 +94,7 @@ public class TencentQuoteService implements QuoteService {
 	public <T extends Quote> List<T> get(Class<T> clazz, String code, String from, String to, int num)
 			throws Exception {
 		String url = dailyQuoteUrl.replace("V_FROM", from).replace("V_TO", to).replace("V_CODE", code);
-		return parse(clazz, code, HttpExecutor.get(url.replace("V_NUM", String.valueOf(num))));
+		return parse(clazz, code, get(url.replace("V_NUM", String.valueOf(num))));
 	}
 
 	private <T extends Quote> List<T> parse(Class<T> clazz, String code, String response) throws Exception {
@@ -116,7 +114,7 @@ public class TencentQuoteService implements QuoteService {
 			// 除权除息数据
 			// , {nd:2018, fh_sh:3.5, djr:2019-08-01, cqr:2019-08-02,
 			// FHcontent:10\u6d3e3.5\u5143}
-			T quote = clazz.newInstance();
+			T quote = clazz.getDeclaredConstructor().newInstance();
 			quote.setCode(code);
 			quote.setDate(fileds[0]);
 			quote.setOpen(Double.parseDouble(fileds[1]));
